versi1: file browser lokal tanpa hubungan client server