@@ -1,1 +1,2 @@
 versi1: file browser lokal tanpa hubungan client server
+versi2: file browser ganti pakai library file, karena jfilechooser tidak bisa dipakai client server
